criação de nova classe
criação de classe validador para validar a leitura dos varios ficheiros e dos novos dados inseridos